# opendex-sc-sft-nft-staking

./: .gitignore  Cargo.toml  README.md  build-wasm.sh  coverage.sh  reproducible_build.sh
controller/: Cargo.toml  devnet.snippets.sh  mainnet.snippets.sh  mxpy.data-storage.json
controller/meta/: Cargo.toml
controller/output/: opendex-sc-sft-nft-staking-controller.abi.json  opendex-sc-sft-nft-staking-controller.mxsc.json  proxy.rs
controller/scenarios/: deploy_staking_errors.scen.json  harvest_fees.scen.json  opendex_sc_sft_nft_staking_controller.scen.json  remove_contract_errors.scen.json  set_default_fee_receiver.scen.json  set_default_performance_fee.scen.json  set_deployment_fee.scen.json  set_sc_template_address.scen.json  upgrade_contract_errors.scen.json
controller/src/: config.rs  factory.rs  fees.rs  opendex_sc_sft_nft_staking_controller.rs  proxy_staking.rs
controller/tests/: opendex_sc_sft_nft_staking_controller_scenario_go_test.rs  opendex_sc_sft_nft_staking_controller_scenario_rs_test.rs
controller/wasm/: Cargo.toml
staking/: Cargo.toml  devnet_template.snippets.sh  mainnet_template.snippets.sh  mxpy.data-storage.json  sc-config.toml
staking/meta/: Cargo.toml
staking/output/: opendex-sc-sft-nft-staking.abi.json  opendex-sc-sft-nft-staking.imports.json  opendex-sc-sft-nft-staking.mxsc.json  opendex-sc-sft-nft-staking.wasm
staking/scenarios/: claim_rewards_1_alone_full.scen.json  claim_rewards_1_alone_half.scen.json  claim_rewards_1_no_reward.scen.json  claim_rewards_2_10_000.scen.json  claim_rewards_2_7_500.scen.json  init.scen.json  (+20 more)
(+33 files in other folders)
