[package]
name = "opendex-sc-sft-nft-staking-controller"
version = "0.0.0"
edition = "2021"
publish = false
authors = ["you"]

[lib]
path = "src/opendex_sc_sft_nft_staking_controller.rs"

[dependencies]
multiversx-sc-modules = "0.56.1"

[dependencies.multiversx-sc]
version = "0.56.1"

[dev-dependencies]
num-bigint = "0.4"

[dev-dependencies.multiversx-sc-scenario]
version = "0.56.1"
