[package]
name = "opendex-sc-sft-nft-staking"
version = "0.0.0"
publish = false
edition = "2021"
authors = ["you"]

[lib]
path = "src/opendex_sc_sft_nft_staking.rs"

[dependencies]
multiversx-sc-modules = "0.62.0"

[dependencies.multiversx-sc]
version = "0.62.0"

[dev-dependencies]
num-bigint = "0.4"

[dev-dependencies.multiversx-sc-scenario]
version = "0.62.0"
